# git-switch

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/blank_terminal/: cli.py
src/git_switch/: cli.py  ssh_manager.py
tests/: conftest.py  test_cli.py
